# mathmethods

./: CMakeLists.txt
include/: interface.hpp  plotter.hpp  polynomial_regression.hpp
resourses/: input.txt
src/: interface.cpp  mathmeth.cpp  plotter.cpp  polynomial_regression.cpp
